# repo-cli

./: .gitignore  README.md  pyproject.toml
repo_cli/: entry.py
repo_cli/Maverick/: Builder.py  Config.py  Content.py  Template.py  default_config.py
repo_cli/Maverick/Galileo/: __init__.py  utils.py
repo_cli/Maverick/Galileo/assets/: galileo-7c8cea54ab.js
repo_cli/Maverick/Galileo/templates/includes/: skeleton.html
repo_cli/default_dir/test_src/: 2017-06-28-about.md  2018-11-09-Typography.md
tests/: test_test.py
